# qtanswer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  boardwidget.cc  boardwidget.h  buzzer.cc  categories.json  cluewidget.cc  cluewidget.h  gamewindow.cc  gamewindow.h  main.cc  player.cc  player.h  qtanswer.pro  tile.cc  tile.h  version.cmake
.github/workflows/: cmake-multi-platform.yml
include/: boardwidget.h  buzzer.h
src/: CMakeLists.txt  boardwidget.cc  boardwidget.h  buzzer.cc  cluefile.cc  cluefile.h  cluewidget.cc  cluewidget.h  gamewindow.cc  gamewindow.h  main.cc  mainwindow.cc  mainwindow.h  player.cc  player.h  resultswidget.h  startwidget.cc  startwidget.h  tile.cc  version.h  version.h.in
src/interface/: CMakeLists.txt  boardwidget.h  cluewidget.h  resultswidget.cc  resultswidget.h  startwidget.h
src/wrappers/: CMakeLists.txt  cluefile.cc  cluefile.h  player.cc  player.h
